Change Work Experience
Change Current Work Experience, Role and Job Description

--- a/index.htm
+++ b/index.htm
@@ -147,18 +147,27 @@
           <img class="logo" src="hcl.png" alt="HCLTech" />
 
           <div class="job-title">
-            SAP Security Analyst <br /><span class="gray">(2024-Present)</span>
+            Analyst <br /><span class="gray">(2024-Present)</span>
           </div>
           <div class="job-desc">
             <ul>
-              <li>Delivered secure and efficient user access provisioning across SAP systems including CUA, PCE, PGW,
-                and PHB.
+              <li>Developed full-stack internal tools using React.js and Node.js with Java/JSP backend, 
+improving process efficiency by 40% and reducing costs by 20% annually
               </li>
-              <li>Conducted weekly audits, access reviews, and incident resolution in compliance with GRC guidelines.
+              <li>Automated SAP GRC workflows using Python (user provisioning, access cleanup, and 
+reporting), reducing manual effort by 60% and increasing productivity. 
               </li>
-              <li>Reduced provisioning time by 30% through optimized process automation and scripting.
+              <li>Designed interactive compliance dashboards (React.js, HTML, JS) that improved audit 
+readiness and cut preparation time by 30%. 
               </li>
-              <li>Collaborated with cross-functional teams to enhance system security.</li>
+              <li> Integrated OpenAI APIs into internal tools, enabling AI chatbot & summarization features 
+that improved ticket resolution speed by 25%. </li>
+              <li>Built secure backend APIs (Node.js & Java) implementing RBAC, optimized JDBC queries, 
+and enhanced performance reliability.</li>
+              <li>Collaborated in Agile sprints, contributed to code reviews, version control (Git/GitHub), 
+and conducted testing with Postman and JUnit.</li>
+              <li>Delivered documentation and internal training, driving tool adoption across 3+ 
+departments and scaling automation impact by 45%. </li>
             </ul>
 
           </div>
@@ -456,6 +465,7 @@
     crossorigin="anonymous"></script>
   <script src="index.js"></script>
 </body>
+
 
 
 
